# check-pr-issue-action

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  test-action-skip-usernames.txt  test-action.yml
src/check_pr_issue_action/: __init__.py  config.py  main.py  pr_manager.py  validator.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_pr_manager.py  test_validator.py
